--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,12 @@
         "@fortawesome/free-regular-svg-icons": "^6.6.0",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
+        "@reduxjs/toolkit": "^2.3.0",
         "axios": "^1.7.7",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-redux": "^9.1.2",
+        "redux": "^5.0.1"
     },
     "devDependencies": {
         "@eslint/js": "^9.11.1",
