Added new content type image for homepage in strapi. Added new ignore in gitignore file. Deleted todo in header.

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,9 @@ build/
 .env.test.local
 .env.production.local
 
+# Turbo local environment files
+.turbo/
+
 # Yarn specific files
 .yarn/cache/
 .yarn/unplugged/
