--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -19,6 +19,7 @@
         "@reduxjs/toolkit": "^2.5.0",
         "axios": "^1.7.7",
         "framer-motion": "^12.4.5",
+        "lottie-react": "^2.4.1",
         "marked": "^15.0.4",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
