--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,13 +18,17 @@
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@reduxjs/toolkit": "^2.5.0",
         "axios": "^1.7.7",
+        "date-fns": "^4.1.0",
         "framer-motion": "^12.4.5",
         "lottie-react": "^2.4.1",
         "marked": "^15.0.4",
         "react": "^19.0.0",
+        "react-confetti": "^6.3.0",
         "react-dom": "^19.0.0",
         "react-redux": "^9.2.0",
         "react-router-dom": "^7.2.0",
+        "react-use": "^17.6.0",
+        "recharts": "^2.15.1",
         "redux": "^5.0.1"
     },
     "devDependencies": {
